debag the images(i hope)

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <section class="container">
-      <div class="logo" style="background-image: url(/public/favicon/logo.svg);"></div>
+      <div class="logo" style="background-image: url(./public/favicon/logo.svg);"></div>
       <div class="layers">
-        <div class="layer-1 layers__item" style="background-image: url(/public/images/layer-1.jpg);"></div>
-        <div class="layer-2 layers__item" style="background-image: url(/public/images/layer-2.png);"></div>
+        <div class="layer-1 layers__item" style="background-image: url(./public/images/layer-1.jpg);"></div>
+        <div class="layer-2 layers__item" style="background-image: url(./public/images/layer-2.png);"></div>
         <div class="layer-3 layers__item">
           <div class="layers__item-content">
             <h1 class="title">Natural Forest <span>html/css</span></h1>
@@ -24,8 +24,8 @@
         <div class="layer-4 layers__item">
           <canvas class="rain"></canvas>
         </div>
-        <div class="layer-5 layers__item" style="background-image: url(/public/images/layer-5.png);"></div>
-        <div class="layer-6 layers__item" style="background-image: url(/public/images/layer-6.png);"></div>
+        <div class="layer-5 layers__item" style="background-image: url(./public/images/layer-5.png);"></div>
+        <div class="layer-6 layers__item" style="background-image: url(./public/images/layer-6.png);"></div>
       </div>
       <!-- <div style="height:100vh;"></div> -->
     </section>
