--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="3D Landing page"/>
     <link rel="stylesheet" href="./src/css/styles.min.css">
     <title>Site 3D</title>
   </head>
